# scutclient-rs

./: Cargo.toml
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-03-27-scutclient-rs-design.md
openwrt/: Makefile
openwrt/files/: scutclient.config  scutclient.init
src/: main.rs
src/auth/: eap.rs  eapol.rs  mod.rs  socket.rs
src/config/: mod.rs
src/drcom/: mod.rs  packet.rs  udp.rs
src/utils/: md5.rs  mod.rs
